--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -1,6 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
+node_modules
 /node_modules
 /.pnp
 .pnp.js
@@ -11,8 +12,6 @@
 # production
 /build
 
-# node_modules
-node_modules/
 
 # misc
 .DS_Store
